# ro-crate-rs

./: Cargo.toml
benches/: create_and_write.rs
cli/: Cargo.toml
cli/src/: args.rs  main.rs
examples/: automerge_sync.rs
python/: Cargo.toml
src/ro_crate/: context.rs  mod.rs  read.rs  rocrate.rs  write.rs
src/ro_crate/rdf/: automerge.rs  mod.rs
tests/fixtures/: _ro-crate-metadata-minimal.json
tui/: Cargo.toml
tui/src/: commands.rs  error.rs  main.rs  user_input.rs
