[package]
name = "ro-crate-rs"
version = "0.4.12"
edition = "2021"
repository = "https://github.com/intbio-ncl/ro-crate-rs"
authors = ["Matt Burridge <m.burridge1@newcastle.ac.uk>"]
autoexamples = false
license = "Apache-2.0"
description = "Library for creating, modifying and reading RO-Crates"
keywords = ["researchobject","ro-crate","ro","metadata","jsonld"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rocraters"
path = "src/lib.rs"
doctest = false

[features]
parquet = ["dep:polars"]

[workspace]
members = [
    "cli",
    "tui",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31", features = ["serde"]}
uuid = { version = "1.0", features = ["v4", "v7"] }
rand = "0.9"
url = "2.5"
zip = "6.0.0"
walkdir = "2"
reqwest = { version = "0.12", features =  ["blocking", "json"], default-features = false}
dirs = "6.0.0"
polars = {version = "0.52.0", features =["parquet"], optional = true}

[dev-dependencies]
tempfile = "3.9"

