[workspace.package]
version = "0.4.12"
edition = "2021"
repository = "https://github.com/intbio-ncl/ro-crate-rs"
authors = ["Matt Burridge <m.burridge1@newcastle.ac.uk>"]
autoexamples = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "cli",
    "tui",
    "library",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31", features = ["serde"]}
uuid = { version = "1.0", features = ["v4", "v7"] }
rand = "0.9"
url = "2.5"
zip = "6.0.0"
walkdir = "2"
reqwest = { version = "0.12", features =  ["blocking", "json"] }
dirs = "6.0.0"
thiserror = "2.0.17"
log = "0.4.29"

[workspace.dev-dependencies]
tempfile = "3.9"
